# mxadt

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.status  configure  configure.ac  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
doc/: Doxyfile
mxadt/: double_link_element.c  double_link_element.h  linked_list.c  linked_list.h  queue.c  queue.h  single_link_element.c  single_link_element.h  stack.c  stack.h
src/: Makefile  Makefile.am  Makefile.in
src/.deps/: stack.Po
src/mxadt/: config.h.in  double_link_element.c  double_link_element.h  linked_list.c  linked_list.h  mxadt_config.h  mxadt_config.h.in  queue.c  queue.h  single_link_element.c  single_link_element.h  stack.c  stack.h  stamp-h1  types.h
test/: Makefile  Makefile.am  Makefile.in  queue_test.c  stack_test.c
test/.deps/: stack_test.Po
