# Prelude
AC_INIT([mxadt], [0.1], [emersonmx@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall])
AC_CONFIG_MACRO_DIR([m4])
# Checks for programs.
AC_PROG_CC
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures and compiler characteristics.
# Checks for library functions.

# Output files.
AC_CONFIG_HEADERS([src/mxadt/mxadt_config.h])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT

