# Prelude
AC_INIT([mxadt], [0.1], [emersonmx@gmail.com], [],
        [https://bitbucket.org/emersonmx/mxadt])
AC_PREREQ(2.5)
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 -Wall foreign subdir-objects silent-rules])
AM_SILENT_RULES([yes])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AM_PROG_AR
AC_PROG_LIBTOOL
LT_INIT

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures and compiler characteristics.

# Checks for library functions.

# Output files.
AC_CONFIG_HEADERS([mxadt/config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

