AM_CFLAGS = -Wall

lib_LIBRARIES = libmxadt.a

libmxadt_a_SOURCES = \
		mxadt/stack.c \
		mxadt/queue.c \
		mxadt/linked_list.c \
		mxadt/single_link_element.c \
		mxadt/double_link_element.c

nobase_include_HEADERS = \
		mxadt/stack.h \
		mxadt/queue.h \
		mxadt/linked_list.h \
		mxadt/types.h \
		mxadt/single_link_element.h \
		mxadt/double_link_element.h
